Styles and alignment issues fixed

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,6 +3,14 @@
      margin: 0 !important;
 }
 
+body { 
+   overflow-x: hidden;
+}
+
+.card:focus, .card:hover {
+ box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+}
+
 /*pace over rides*/
 
 .pace .pace-progress {
